# cloud_masking

./: .gitignore  pyproject.toml
notebooks/: cloud_mask_examlpe_in_chunks.ipynb  cloud_mask_example_full_tile.ipynb
